<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
android:rowCount="4">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:gravity="fill"
        android:text="@string/textview"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="@string/toast_message"
        android:gravity="fill"
        android:text="@string/ButtonText3" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="fill"
        android:text="@string/checkbox" />


    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switchbutton" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/type_message"
        android:textSize="30sp"
        android:inputType="textPersonName" />
</GridLayout>

